--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ nav ul li a {
 }
 
 .banner {
-    background: url('banner-image.jpg') no-repeat center center/cover;
+    background: url('banner_image.jpg') no-repeat center center/cover;
     height: 300px;
     color: #fff;
     text-align: center;
